# daisymultieffect

./: .gitignore  .gitmodules  CLAUDE.md  MIGRATION.md  README.md  architecture.md
.claude/: settings.local.json
.github/skills/daisy/: SKILL.md
.github/skills/effect/: SKILL.md
.github/skills/midi/: SKILL.md
bridge/: CMakeLists.txt  run-bridge.sh
bridge/src/: Main.cpp  MainComponent.cpp  MainComponent.h  MidiBridge.cpp  MidiBridge.h
core/: README.md
core/audio/: audio_processor.cpp  audio_processor.h  pedalboard.h  tempo.h
core/effects/: base_effect.h  cabinet_ir.h  chorus.h  compressor.h  delay.h  distortion.h  effect_metadata.h  effect_registry.cpp  effect_registry.h  effect_static_defs.cpp  eq.h  fast_math.h  flanger.h  neural_amp.h  noise_gate.h  overdrive.h  phaser.h  reverb.h  stereo_mixer.h  stereo_sweep_delay.h  time_synced_effect.h  tremolo.h  tuner.h
core/effects/embedded/: ir_registry.h  model_registry.h
core/effects/embedded/irs/: IR_SM57_V30_4_Raw.h  Mars_US_Deluxe.h  Mars_Vox_Bright.h  Mesa_Oversized_V30_AT2020_2___jp_is_out_of_tune.h  Mesa_Oversized_V30_SM57_1___jp_is_out_of_tune.h  Mesa_Oversized_V30_SM57_2___jp_is_out_of_tune.h  V30_P2_audix_i5_deerinkstudios.h  V30_P2_sene935_deerinkstudios.h
core/effects/embedded/models/: MESA_MK3_HIGAIN_LIGHT_MELODISAMPO.h  gru9_models.h  tw40_blues_solo_deerinkstudios.h  tw40_british_lead_deerinkstudios.h  tw40_british_rhythm_deerinkstudios.h  tw40_california_crunch_deerinkstudios.h
core/effects/embedded/wavenet/: arena.hpp  wavenet_layer.hpp  wavenet_layer_array.hpp  wavenet_model.hpp
core/midi/: sysex_utils.h
core/patch/: default_patch.h  patch_protocol.h
core/protocol/: midi_protocol.h  sysex_protocol.h  sysex_protocol_c.h
core/state/: patch_observer.h  patch_state.h
core/tests/: test_neural_amp.cpp
docs/: adding-effects.md  ux-routing-wireframe.md
firmware/: Makefile  STM32H750IB_custom.lds
firmware/src/: audio_engine.cpp  audio_engine.h  effect_registry.cpp  effect_registry.h  effects_delay.h  effects_distortion.h  effects_reverb.h  effects_static_defs.cpp  effects_stereo_mixer.h  effects_stereo_sweep_delay.h  main.cpp  midi_control.cpp  midi_control.h  patch_examples.cpp  pedalboard.h  tempo.h  tempo_control.cpp  tempo_control.h  time_synced_effect.h  ui_control.cpp  ui_control.h
firmware/src/audio/: audio_engine.cpp  audio_engine.h  pedalboard.h  tempo_control.cpp  tempo_control.h
firmware/src/effects/: base_effect.h  cabinet_ir_itcmram.cpp  chorus.h  custom_gru9.cpp  custom_gru9.h  effect_registry.cpp  effect_registry.h  effects_delay.h  effects_distortion.h  effects_itcmram.cpp  effects_stereo_sweep_delay.h  fast_math_dtcmram.cpp  nam_model_weights.h  nam_pico_weights.h  nam_wavenet.h  nam_wavenet_effect.h  neural_amp_itcmram.cpp  static_defs.cpp  time_synced_effect.h
firmware/src/effects/embedded/: ir_registry.h  model_registry.h
firmware/src/effects/embedded/irs/: IR_SM58_V30_3_Raw.h  Mars_Proteus.h  Mesa_Oversized_V30_AT2020_1___jp_is_out_of_tune.h  Mesa_Oversized_V30_SM58_1___jp_is_out_of_tune.h  Mesa_Oversized_V30_SM58_2___jp_is_out_of_tune.h  V30_P1_opus87_deerinkstudios.h  V30_P1_sene935_deerinkstudios.h
firmware/src/effects/embedded/models/: bandmaster_clean.h  bandmaster_high_gain.h  bandmaster_med_gain.h  tw40_california_clean_deerinkstudios.h
firmware/src/midi/: midi_control.cpp  midi_control.h  sysex_utils.h
firmware/src/patch/: patch_examples.cpp  patch_protocol.h  ui_control.cpp  ui_control.h
host/apple/: ContentView.swift  ContentView.swift.bak  DaisyMultiFX-Bridging-Header.h  DaisyMultiFXApp.swift  MidiController.swift  MidiController.swift.bak  README.md  SysExProtocol.swift
host/apple-xcode/DaisyMultiEffect.xcodeproj/: project.pbxproj
host/apple-xcode/DaisyMultiEffect.xcodeproj/project.xcworkspace/xcuserdata/chrfalch.xcuserdatad/: UserInterfaceState.xcuserstate
host/apple-xcode/DaisyMultiEffect.xcodeproj/xcuserdata/chrfalch.xcuserdatad/xcschemes/: xcschememanagement.plist
host/expo/: app.json  package.json
host/expo/app/: index.tsx
host/expo/components/: Badge.tsx  Button.tsx  Card.tsx  CardTitle.tsx  ConnectionStatus.tsx  DeviceStatusMeter.tsx  EnumPicker.tsx  GainControl.tsx  GraphView.tsx  PedalSlot.tsx  SectionTitle.tsx  Slider.tsx  Stack.tsx  StatusMeter.tsx
host/expo/hooks/: index.ts  useDaisyMultiFX.ts  useDebouncedEffect.ts  useDeviceStatus.ts
host/expo/modules/daisy-multi-fx/: expo-module.config.json  index.ts
host/expo/modules/daisy-multi-fx/ios/: DaisyMidiController.swift  DaisyMultiFX.podspec  DaisyMultiFXModule.swift  MidiProtocol.swift  Models.swift
host/expo/modules/daisy-multi-fx/src/: DaisyMultiFX.ts  DaisyMultiFX.types.ts  DaisyMultiFXModule.ts
host/expo/screens/editor/: EffectContextMenuButton.tsx  ParametersPanel.tsx  RoutingPanel.tsx  index.tsx
host/expo/utils/: patchStorage.ts  routingGraph.ts  storage.ts
host/ios/: ContentView.swift  MidiController.swift
tools/: convert_nam_weights.py  download_nam_models.sh
tools/converters/: convert_aidax_to_cpp.py  convert_ir_to_cpp.py  inspect_model_json.py  test_model_inference.py  verify_conversion.py
vst/: CMakeLists.txt  README.md
vst/src/: BufferManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  standalone_test.cpp
